# lidar_camera_calibration

./: CMakeLists.txt  package.xml
config/: extrinsic matrix.txt  marker_coordinate.txt  points.txt  points_camera.txt
include/pose_cam_estimate/: PreProcessing.h  getCorner.h  icp.h
log/: avg_values.txt
src/: findLineSegment.cpp  get_corner_position_camera.py  pose_estimation.py  test.py  utils.py
